fix: add backlight fallback in waybar

--- a/modules/home/desktop/void/mechabar/config.jsonc
+++ b/modules/home/desktop/void/mechabar/config.jsonc
@@ -86,6 +86,7 @@
 		"group/pulseaudio",
 		"custom/left_div#7",
 		"backlight",
+    "custom/backlight_fallback",
 		"custom/left_div#8",
 		"battery",
     "custom/battery_fallback",
