--- a/modules/home/desktop/void/mechabar/config.jsonc
+++ b/modules/home/desktop/void/mechabar/config.jsonc
@@ -37,11 +37,11 @@
 		"~/.config/waybar/modules/battery.jsonc",
 		"~/.config/waybar/modules/custom/power_menu.jsonc",
 
-		"~/.config/waybar/modules/custom/dividers.jsonc"
+		"~/.config/waybar/modules/custom/dividers.jsonc",
 
 		// modules that are not included by default:
 		// "~/.config/waybar/modules/extras/taskbar.jsonc",
-		// "~/.config/waybar/modules/extras/tray.jsonc",
+		"~/.config/waybar/modules/extras/tray.jsonc"
 		// "~/.config/waybar/modules/extras/wireplumber.jsonc"
 	],
 
@@ -81,6 +81,7 @@
 		"custom/right_div#5"
 	],
 	"modules-right": [
+    "tray",
 		"mpris",
 		"custom/left_div#6",
 		"group/pulseaudio",
